bnf.txt
http://port70.net/~nsz/c/c11/n1570.html#6.4
http://port70.net/~nsz/c/c11/n1570.html#6.5.1
http://port70.net/~nsz/c/c11/n1570.html#6.8
http://port70.net/~nsz/c/c11/n1570.html#A.1
program    = definition*
definition = "int" ident "(" varargs-list )" "{" stmt* "}"
stmt       = expr ";"
           | "{" stmt* "}"
           | "if" "(" expr ")" stmt ("else" stmt)?
           | "while" "(" expr ")" stmt
           | "for" "(" expr? ";" expr? ";" expr? ")" stmt
           | "return" expr ";"
           | "int" idnet ";"
vargs-list = ("int" ident)?
           | vargs-list, "int" ident
expr       = assign
assign     = equality ("=" assign)?
equality   = relational ("==" relational | "!=" relational)*
relational = add ("<" add | "<=" add | ">" add | ">=" add)*
add        = mul ("+" mul | "-" mul)*
mul        = unary ("*" unary | "/" unary)*
unary      = "+"? primary
           | "-"? primary
           | "&"? unary
           | "*"? unary
primary    = num | ident ("(" argument-expression-list ")")? | "(" expr ")"
argument-expression-list = (equality (, equality)*)?
